--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(251, 220, 225);
-    background-image: url('../assets/iPhone\ 13\ Pro\ Max\ -\ 1.png');
+    background-image: url('../assets/sky.png');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -8,4 +8,28 @@ body {
     height: 100vh;
     align-items: center;
     font-family: sans-serif;
+}
+
+main {
+    background-color: rgb(243, 243, 243);
+    padding: 2rem;
+    border-radius: 0.4rem;
+}
+
+
+
+
+h1 {
+    color: rgb(61, 60, 60);
+    font-family:'raleway';
+    font-size: 2rem;
+    padding-bottom: 3rem;
+}
+
+#add {
+    color: rgb(0, 6, 3);
+}
+
+span {
+    padding: 0.8rem;
 }
