--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     font-family: sans-serif;
 }
 
+html{
+    font-size: 100%;
+}
+
 main {
     background-color: rgb(243, 243, 243);
     padding: 2rem;
