--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     flex-flow: column nowrap;
     height: 100vh;
+    width: 100vw;
     align-items: center;
     font-family: sans-serif;
 }
@@ -34,6 +35,7 @@ h1 {
     color: rgb(0, 6, 3);
 }
 
-span {
-    padding: 0.8rem;
+#removeButton {
+    background-color: aliceblue;
+    border-radius: 0.2rem;
 }
