--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,6 @@ main {
     border-radius: 0.4rem;
 }
 
-
-
-
 h1 {
     color: rgb(61, 60, 60);
     font-family:'raleway';
@@ -38,4 +35,6 @@ h1 {
 #removeButton {
     background-color: aliceblue;
     border-radius: 0.2rem;
+    position: relative;
+   left: 30px;
 }
